# devctl

./: .coderabbit.yaml  .gitignore  COMMANDS.md  CONTRIBUTING.md  README.md  changelog.md  pyproject.toml  ruff.toml
.github/: release-drafter.yml
.github/workflows/: codeql.yml  publish.yml  release-drafter.yml  ruff.yml  semantic-pr.yml  stale.yml  tests.yml
devctl/: README.md  __init__.py  main.py
devctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
devctl/commands/: __init__.py  add.py  deploy.py  docker.py  init.py  run.py
devctl/generators/: __init__.py  angular.py  django.py  docker_scaffold.py  fastapi.py  go_fiber.py  nestjs.py  nextjs.py  nodejs.py  react.py  scaffold_angular.py  scaffold_django.py  scaffold_fastapi.py  scaffold_go.py  scaffold_nestjs.py  scaffold_nextjs.py  scaffold_nodejs.py  scaffold_react.py  scaffold_spring.py  scaffold_svelte.py  scaffold_vue.py  spring.py  svelte.py  vue.py
devctl/orchestrator/: __init__.py  config_builder.py  runner.py  scanner.py
devctl/templates/: application.properties.j2  docker-compose.yml.j2
devctl/utils/: __init__.py  dependencies.py  env_loader.py  templates.py
samples/: README.md
samples/sample-api/: Dockerfile  docker-compose.yml  pom.xml
test/: test_add.py  test_commands.py  test_deploy.py  test_django.py  test_docker_scaffold.py  test_env_loader.py  test_fastapi.py  test_go.py  test_init.py  test_main.py  test_mongodb.py  test_nestjs.py  test_nextjs.py  test_nodejs.py  test_pom_patcher.py  test_react.py  test_runner.py  test_scanner.py  test_svelte.py  test_utils.py
(+77 files in other folders)
