[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devctl"
version = "0.1.1"
description = "Local development orchestrator for Spring Boot, Angular, and Vue.js"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Youssef Fellah" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.12.3",
    "requests>=2.31.0",
    "jinja2>=3.1.3",
    "rich>=13.7.0",
]

[project.scripts]
devctl = "devctl.main:main"
